# fastapi-auth0

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
fastapi_auth0/: __init__.py  auth.py
tests/: test_auth.py
