[tool.poetry]
name = "fastapi-auth0"
version = "0.5.0"
description = "Easy auth0.com integration for FastAPI"
authors = ["Dorin Clisu"]
license = "MIT"
readme = "README.md"
#packages = [{include = "fastapi_auth0"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
python-jose = "^3.3.0"
pydantic = "^2.3.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
requests = "^2.31.0"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
