[tool.poetry]
name = "fastapi-auth0"
version = "0.5.0"
description = "Easy auth0.com integration for FastAPI"
authors = ["Dorin Clisu"]
license = "MIT"
readme = "README.md"
#packages = [{include = "fastapi_auth0"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
python-jose = "^3.3.0"
pydantic = "^2.3.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
requests = "^2.31.0"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
